src/objects/Test__c.object
<CustomObject>
    <fields>
        <fullName>Alcohol_Drug_Use_Text__c</fullName>
        <label>Alcohol/ Drug Use Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alcohol_Drug_Use__c</fullName>
        <label>Alcohol Drug Use</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Angry_Irritable_Text__c</fullName>
        <label>Angry-Irritable Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Angry_Irritable__c</fullName>
        <label>Angry Irritable</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_Math_GE__c</fullName>
        <description>TABE Grade Equivalency</description>
        <label>Applied Math GE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_Math_LF__c</fullName>
        <description>TABE: Form</description>
        <label>Applied Math LF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barbiturates__c</fullName>
        <label>Barbiturates</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benzodiazepine__c</fullName>
        <label>Benzodiazepine</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cocaine__c</fullName>
        <label>Cocaine</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Client Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Depressed_Anxious_Text__c</fullName>
        <label>Depressed-Anxious Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depressed_Anxious__c</fullName>
        <label>Depressed Anxious</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecstasy__c</fullName>
        <label>Ecstasy</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GED_Average__c</fullName>
        <description>TABE: Predicated GED Average Score</description>
        <label>GED Average</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GED_Test_ID__c</fullName>
        <label>TASC Test ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Equivalent__c</fullName>
        <label>Grade Equivalent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Other_Description__c</fullName>
        <label>ID Other Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <label>ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ID_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Validity_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Validity Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LA_Essay__c</fullName>
        <label>LA Essay</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LA_Reading__c</fullName>
        <label>LA Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LA_Writing__c</fullName>
        <label>LA Writing</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_GE__c</fullName>
        <description>TABE Grade Equivalency</description>
        <label>Language GE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_LF__c</fullName>
        <description>TABE Form</description>
        <label>Language LF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Mechanics_GE__c</fullName>
        <description>TABE Grade Equivalency</description>
        <label>Language Mechanics GE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language_Mechanics_LF__c</fullName>
        <description>TABE Form</description>
        <label>Language Mechanics LF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marijuana__c</fullName>
        <label>Marijuana</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Math_Computation_GE__c</fullName>
        <description>TABE Grade Equivalency</description>
        <label>Math Computation GE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Math_Computation_LF__c</fullName>
        <description>TABE Form</description>
        <label>Math Computation LF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Math_GE_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag math GE as invalid so math_GE_RPT will be blank on this record.</description>
        <inlineHelpText>If checked, the Math GE RPT score will be blank</inlineHelpText>
        <label>Math GE Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Math_GE_RPT__c</fullName>
        <description>TABE/STAR - show GE for Math</description>
        <formula>CASE(RecordTypeId,
&apos;012600000005JAd&apos;,
if(text(Test_Type__c)=&apos;Math&apos;,Grade_Equivalent__c,null),

&apos;012600000005LQ8&apos;, 
if( Math_GE_Invalid__c=TRUE,null,Total_Math_GE__c),
null)</formula>
        <label>Math GE RPT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Math_II_CAT__c</fullName>
        <label>Math II</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Math_II_Pass_Fail__c</fullName>
        <label>Math II Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Math_I_CAT__c</fullName>
        <description>CAT Test</description>
        <label>Math I</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Math_I_Pass_Fail__c</fullName>
        <description>CAT Test</description>
        <label>Math I Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Math__c</fullName>
        <label>Math</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meth__c</fullName>
        <label>Meth</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_Note__c</fullName>
        <label>Migration Note</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opiates__c</fullName>
        <label>Opiates</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCP__c</fullName>
        <label>PCP</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Positive_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Positive Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reading_CAT__c</fullName>
        <label>Reading</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reading_GE_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag if Reading_GE_RPT should be blank</description>
        <inlineHelpText>If checked, Reading GE RPT will be blank for this record. Only Supervisors can edit.</inlineHelpText>
        <label>Reading GE Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reading_GE_RPT__c</fullName>
        <description>TABE/STAR populate reading GE based on test type.</description>
        <formula>CASE(RecordTypeId,
&apos;012600000005JAd&apos;,if(text(Test_Type__c)=&apos;Read&apos;,Grade_Equivalent__c,null),
&apos;012600000005LQ8&apos;, if( Reading_GE_Invalid__c = TRUE, null, Reading_GE__c),
null)</formula>
        <label>Reading GE RPT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reading_GE__c</fullName>
        <description>TABE Grade Equivalency</description>
        <label>Reading GE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reading_LF__c</fullName>
        <description>TABE Form</description>
        <label>Reading LF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reading_Pass_Fail__c</fullName>
        <description>CAT Test</description>
        <label>Reading Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Science__c</fullName>
        <label>Science</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Studies__c</fullName>
        <label>Social Studies</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Somatic_Complaints_Text__c</fullName>
        <label>Somatic Complaints Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Somatic_Complaints__c</fullName>
        <label>Somatic Complaints</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spelling_GE__c</fullName>
        <description>TABE Grade Equivalency</description>
        <label>Spelling GE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spelling_LF__c</fullName>
        <description>TABE Form</description>
        <label>Spelling LF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suicide_Ideation_Text__c</fullName>
        <label>Suicide Ideation Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suicide_Ideation__c</fullName>
        <label>Suicide Ideation</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TempMaysiSummary__c</fullName>
        <description>Intermediate formula table for MAYSI cautions and warnings</description>
        <formula>if(or(left(Angry_Irritable_Text__c,1)=&apos;C&apos;,left(Thought_Disturbance_Text__c,1)=&apos;C&apos;,left(Somatic_Complaints_Text__c,1)=&apos;C&apos;,  LEFT(Alcohol_Drug_Use_Text__c,1)=&apos;C&apos;,  LEFT(Suicide_Ideation_Text__c,1)=&apos;C&apos;, LEFT(Traumatic_Experiences_Text__c,1)=&apos;C&apos;, LEFT(Depressed_Anxious_Text__c,1)=&apos;C&apos;),&apos;Cautions&apos;&amp;&apos;  &apos;,&apos;&apos;) &amp;if(or(left(Angry_Irritable_Text__c,1)=&apos;W&apos;,left(Thought_Disturbance_Text__c,1)=&apos;W&apos;,left(Somatic_Complaints_Text__c,1)=&apos;W&apos;, 
LEFT(Alcohol_Drug_Use_Text__c,1)=&apos;W&apos;, LEFT(Suicide_Ideation_Text__c,1)=&apos;W&apos;, LEFT(Traumatic_Experiences_Text__c,1)=&apos;W&apos;, LEFT(Depressed_Anxious_Text__c,1)=&apos;W&apos;),&apos;Warnings &apos;,&apos;&apos;)</formula>
        <label>TempMaysiSummary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Only looks up external entities and CASES Programs. May want to change CASES programs to CASES account.</description>
        <label>Test Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Summary__c</fullName>
        <label>Test Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Title__c</fullName>
        <formula>case(RecordTypeId,
&apos;012600000005MJY&apos;,&apos;CAT&apos;,
&apos;012600000005JAb&apos;,text(Test_Type__c),
&apos;012600000005N5h&apos;, text(Test_Type__c),
&apos;012600000005JAa&apos;,&apos;Urinalysis&apos;&amp;&apos; &apos;&amp;if(Is_Validity_Test__c=False,&apos;&apos;,&apos;Validity&apos;),
&apos;012600000005JAd&apos;,&apos;STAR&apos;&amp;&apos; &apos;&amp;text(Test_Type__c),
&apos;012600000005JAc&apos;,&apos;MAYSI&apos;,
&apos;012600000005LQ8&apos;,&apos;TABE &apos;+Form__c+&apos; &apos;+text(Test_Type__c),
&apos;&apos;)</formula>
        <label>Test Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictor GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TASC Readiness Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TASC Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thought_Disturbance_Text__c</fullName>
        <label>Thought Disturbance Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thought_Disturbance__c</fullName>
        <label>Thought Disturbance</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Math_GE__c</fullName>
        <description>TABE Grade Equivalency</description>
        <label>Total Math GE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Traumatic_Experiences_Text__c</fullName>
        <label>Traumatic Experiences Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traumatic_Experiences__c</fullName>
        <label>Traumatic Experiences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <description>Validity is a number between 0 and ?, but can&apos;t be a numeric field because if it is a validity test, 0 has a meaning. An empty field means it is not a validity test.</description>
        <inlineHelpText>Only enter a number in this field if the test results are those of a validity test!</inlineHelpText>
        <label>Validity</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vocabulary_GE__c</fullName>
        <description>TABE Grade Equivalency</description>
        <label>Vocabulary GE</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vocabulary_LF__c</fullName>
        <description>TABE Form</description>
        <label>Vocabulary LF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Writing_CAT__c</fullName>
        <description>CAT Test</description>
        <label>Writing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Writing_Pass_Fail__c</fullName>
        <description>CAT Test</description>
        <label>Writing Pass/Fail</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Test_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Positive_Score__c</columns>
        <columns>LA_Reading__c</columns>
        <columns>LA_Writing__c</columns>
        <columns>Total_Score__c</columns>
        <columns>Summary__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Drug_Tests</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Test_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Positive_Score__c</columns>
        <columns>LA_Reading__c</columns>
        <columns>LA_Writing__c</columns>
        <columns>Total_Score__c</columns>
        <columns>Summary__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Test__c.Drug_Test</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Drug Tests</label>
    </listViews>
    <listViews>
        <fullName>GED_Tests</fullName>
        <columns>NAME</columns>
        <columns>Test_Date__c</columns>
        <columns>Contact__c</columns>
        <columns>Form__c</columns>
        <columns>Test_Type__c</columns>
        <columns>ID_Type__c</columns>
        <columns>ID_Verified__c</columns>
        <columns>Result__c</columns>
        <columns>Total_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Test__c.GED</value>
        </filters>
        <label>GED Tests</label>
    </listViews>
    <listViews>
        <fullName>Maysi_Tests</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Test__c.MAYSI</value>
        </filters>
        <label>Maysi Tests</label>
    </listViews>
    <listViews>
        <fullName>TABE</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Test__c.TABE</value>
        </filters>
        <label>TABE</label>
    </listViews>
    <nameField>
        <displayFormat>Test-{0000}</displayFormat>
        <label>Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <recordTypes>
        <fullName>CAT</fullName>
        <active>true</active>
        <description>CUNY Aptitude Test</description>
        <label>CAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drug_Test</fullName>
        <active>true</active>
        <description>Drug test</description>
        <label>Drug Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>GED</fullName>
        <active>true</active>
        <description>General Educational Development</description>
        <label>GED</label>
    </recordTypes>
    <recordTypes>
        <fullName>MAYSI</fullName>
        <active>true</active>
        <description>Massachusetts Youth Screening Instrument Test</description>
        <label>MAYSI</label>
    </recordTypes>
    <recordTypes>
        <fullName>STAR</fullName>
        <active>true</active>
        <description>Standardized Assessment and Reporting Test</description>
        <label>STAR</label>
    </recordTypes>
    <recordTypes>
        <fullName>TABE</fullName>
        <active>true</active>
        <description>TABE Complete battery and survey. Download csv, process, upload to SF</description>
        <label>TABE</label>
    </recordTypes>
    <recordTypes>
        <fullName>TASC</fullName>
        <active>true</active>
        <label>TASC</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Drug_Test_Score_Validation</fullName>
        <active>true</active>
        <description>In order to save a drug test record the user has to at least have one score zero. May not leave all integer fields blank.</description>
        <errorConditionFormula>AND(If( $RecordType.Name  == &apos;Drug Test&apos;, True,False),
ISNULL(Cocaine__c) ,
ISNULL(Alcohol__c) ,
ISNULL(Marijuana__c ),
ISNULL(Opiates__c ),
ISNULL(PCP__c) ,
ISNULL(Meth__c) ,
ISNULL(Barbiturates__c) ,
ISNULL(Benzodiazepine__c) ,
ISNULL(Ecstasy__c))</errorConditionFormula>
        <errorMessage>You must enter at least one score before saving this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Form_values_for_TABE_Test</fullName>
        <active>true</active>
        <errorConditionFormula>and( 
RecordTypeId = &quot;012600000005LQ8AAM&quot;, 
or(Form__c = &quot;9&quot;, Form__c = &quot;10&quot;)
)</errorConditionFormula>
        <errorDisplayField>Form__c</errorDisplayField>
        <errorMessage>TABE tests must have 9 or 10 in the Form field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GED_Result_Validation_Rule</fullName>
        <active>false</active>
        <description>This rule has been deactivated because the education staff add GED test records after they are taken, but before the scores are available, as earmarks.</description>
        <errorConditionFormula>AND(RecordTypeId = &apos;012600000005JAb&apos;, IsBlank(Total_Score__c), ISBLANK(TEXT(Result__c )))</errorConditionFormula>
        <errorDisplayField>Result__c</errorDisplayField>
        <errorMessage>You must fill in a Result</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_cannot_occur_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>Test_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Test_Date__c</errorDisplayField>
        <errorMessage>The test date cannot occur in the future</errorMessage>
    </validationRules>
</CustomObject>